external-cloud-service-2/external-cloud-2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: external-cloud-service-2
  labels:
    app: external-cloud-service-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: external-cloud-service-2
  template:
    metadata:
      labels:
        app: external-cloud-service-2
    spec:
      containers:
      - name: external-cloud-service-2
        image: neeranuchj/kubernetes-zerotrust:external-cloud-service-2
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: external-cloud-service-2
spec:
  selector:
    app: external-cloud-service-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
