external-cloud-service-2/external-cloud-2-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: external-cloud-service-2-vs
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - "*"
  http:
  - match:
    - uri:
        prefix: /api/external-report
    route:
    - destination:
        host: external-cloud-service-2.default.svc.cluster.local
        port:
          number: 3001
