external-cloud-service-2/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: external-cloud-2-authz
spec:
  selector:
    matchLabels:
      app: external-cloud-service-2
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[realm_access][roles]
      values:
      - "admin"
