external-cloud-service-2/external-cloud-2-security.yaml
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: external-cloud-2-authn
spec:
  selector:
    matchLabels:
      app: external-cloud-service-2
  jwtRules:
  - issuer: "https://keycloak.neeranuchj.org/realms/kubernetes-zerotrust"
    jwksUri: "https://keycloak.neeranuchj.org/realms/kubernetes-zerotrust/protocol/openid-connect/certs"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: external-cloud-2-authz
spec:
  selector:
    matchLabels:
      app: external-cloud-service-2
  action: ALLOW
  rules:
  - when:
    - key: request.auth.claims[realm_access][roles]
      values:
      - "admin"
